--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,22 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
+				<configuration>
+				
+					<cloudHubDeployment>
+						<uri>https://anypoint.mulesoft.com/</uri>
+						<muleVersion>${app.runtime}</muleVersion>
+						<username>${username}</username>
+						<password>${password}</password>
+						<applicationName>${project.artifactId}</applicationName>
+						<environment>${env}</environment>
+						<workerType>${workerType}</workerType>
+						<workers>1</workers>
+						<objectStoreV2>true</objectStoreV2>
+						<region>${region}</region>
+					</cloudHubDeployment>
+					
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
