--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>testjenkins</artifactId>
+	<artifactId>testmichijenkins</artifactId>
 	<version>1.1.1</version>
 	<packaging>mule-application</packaging>
 
-	<name>testjenkins</name>
+	<name>testmichijenkins</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
