--- a/pom.xml
+++ b/pom.xml
@@ -30,20 +30,16 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-				
-					<cloudHubDeployment>
+					<armDeployment>
 						<uri>https://anypoint.mulesoft.com/</uri>
 						<muleVersion>${app.runtime}</muleVersion>
 						<username>${username}</username>
 						<password>${password}</password>
 						<applicationName>${project.artifactId}-${env}</applicationName>
 						<environment>${env}</environment>
-						<workerType>${workerType}</workerType>
-						<workers>1</workers>
-						<objectStoreV2>true</objectStoreV2>
-						<region>${region}</region>
-					</cloudHubDeployment>
-					
+						<target>${target}</target>
+      					<targetType>${target.type}</targetType>
+					</armDeployment>
 				</configuration>
 			</plugin>
 		</plugins>
